--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 
 body {
-    background: #c6c9d6e3;
-    color: #969696;
+    background: white;
+    color: #1091db;
     font-weight: 300;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     
 }
 
+<!--H2-->
 
 .navbar-brand{
 	font-family: "Roboto", serif;
@@ -15,4 +16,18 @@ body {
 	font-size: 20px;
     margin-left: auto;
     
+}
+
+.container{
+    padding-top: 15px;
+    padding-bottom: 20px;
+    background-color: white;
+}
+
+.carousel-inner{
+    padding-left: 140px;
+}
+
+.carousel-control-next, .carousel-control-prev{
+    width: 30px;
 }
