--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
     
 }
 
-<!--H2-->
-
 .navbar-brand{
 	font-family: "Roboto", serif;
 	font-weight: 800;
@@ -30,4 +28,5 @@ body {
 
 .carousel-control-next, .carousel-control-prev{
     width: 30px;
+    background-color:#1091db
 }
