--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     background: white;
     color: #1091db;
@@ -28,5 +27,9 @@ body {
 
 .carousel-control-next, .carousel-control-prev{
     width: 30px;
-    background-color:#1091db
+    background-color: #004085;
+}
+
+.jumbotron{
+    background-color: #004085;
 }
